--- a/termos/index.html
+++ b/termos/index.html
@@ -22,8 +22,8 @@
   </style>
 </head>
 
-<body>
-  <h1>Termos de Uso para o Aplicativo SSH T PROJECT VPN</h1>
+<body >
+  <h1>Termos de Uso SSH T PROJECT VPN</h1>
 
   <p>Bem-vindo ao nosso aplicativo de conexão VPN! Antes de começar a utilizar os serviços oferecidos por nós,
     solicitamos que você leia atentamente e concorde com os seguintes termos de uso:</p>
