--- a/termos_vr/index.html
+++ b/termos_vr/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body >
-  <h1>Termos de Uso SSH T PROJECT VPN</h1>
+  <h1>Termos de Uso VR BRASIL VPN</h1>
 
   <p>Bem-vindo ao nosso aplicativo de conexão VPN! Antes de começar a utilizar os serviços oferecidos por nós,
     solicitamos que você leia atentamente e concorde com os seguintes termos de uso:</p>
