--- a/termos_vr/index.html
+++ b/termos_vr/index.html
@@ -33,7 +33,7 @@
     não concorde com algum dos termos aqui apresentados, solicitamos que não faça uso do aplicativo.</p>
 
   <h2>Uso do Aplicativo:</h2>
-  <p>Nosso aplicativo tem como objetivo fornecer conexão VPN gratuita para dispositivos móveis por meio de uma técnica
+  <p>Nosso aplicativo tem como objetivo fornecer conexão VPN para dispositivos móveis por meio de uma técnica
     conhecida como "bughost". O uso do aplicativo é exclusivamente responsabilidade do usuário, que concorda em
     utilizá-lo apenas para fins legais e legítimos. O usuário não deve usar o aplicativo para atividades ilegais,
     prejudiciais, fraudulentas ou que violem os direitos de terceiros.</p>
