--- a/termos_vr/index.html
+++ b/termos_vr/index.html
@@ -6,14 +6,14 @@
   <title>Termos de Uso - VR BRASIL VPN</title>
   <style>
     body {
-      background-color: #FFFFFF;
-      color: #000000;
+      background-color: #202124;
+      color: #aeb2b7;
       font-family: Arial, sans-serif;
       padding: 20px;
     }
 
     h1 {
-      color: #000000;
+      color: #aeb2b7;
     }
 
     p {
