--- a/termos_vr/index.html
+++ b/termos_vr/index.html
@@ -8,7 +8,7 @@
     body {
       background-color: #202124;
       color: #aeb2b7;
-      font-family: Arial, sans-serif;
+      font-family: sans-serif;
       padding: 20px;
     }
 
