Update and rename vrbrasil.html to index.html

--- a/termos/index.html
+++ b/termos/index.html
@@ -3,17 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Termos de Uso - VR BRASIL VPN</title>
+  <title>Termos de Uso - SSH T PROJECT VPN</title>
   <style>
     body {
-      background-color: #FFFFFF;
-      color: #000000;
+      background-color: #14142c;
+      color: #b0a8ffff;
       font-family: Arial, sans-serif;
       padding: 20px;
     }
 
     h1 {
-      color: #000000;
+      color: #b0a8ffff;
     }
 
     p {
